--- a/test/amd.html
+++ b/test/amd.html
@@ -24,11 +24,12 @@
         QUnit.start();
         QUnit.module( "AMD" );
         QUnit.test( "Module loading", function( assert ) {
-          assert.expect( 1 );
+          assert.expect( 2 );
           var done = assert.async();
-          require( [ "../src/dynamic-textarea" ], function() {
+          require( [ "../src/dynamic-textarea" ], function( api ) {
             var textarea = document.getElementById( "amd-loaded" );
             assert.strictEqual( textarea.style.overflow, "hidden", "Should set overflow: hidden to prove the code is in effect" );
+            assert.ok( !!api.refresh, "Should load the refresh API" );
             done();
           });
         });
